﻿5/29/2015 0.8.10.6
  Fixes #197: Arcane Assembler no longer eats armor on shift-click.

5/28/2015 0.8.10.6
  Major under-the-hood changes to how devices interact with the network are underway.
  Bugfix: Potential situation where the Essentia Provider would stop accepting essentia.
  More CC work.

5/27/2015 0.8.10.6
  Fixes #195: Shift+Rightclick in the ACT continues to extract 1 item at a time.
  Added some support for ComputerCraft #194

5/25/2015 0.8.10.6
  Potential bugfix: Improper array bounds checking.
  Potential bugfix: ACT view slots are checked for being null before usage.

5/25/2015 0.8.10.5
  Fixes #135: Adds support for shift-clicking arcane recipes if ThaumicNEIPlugin is installed.

5/25/2015 0.8.10.4
  Fixes #191: Features should never be null.

5/23/2015 0.8.10.3
  Bugfix: Feature dependencies resetting to false.
  Bugfix: Wrench focus calculation errors fixed.

5/22/2015 0.8.10.3
  More API changes.
  Added safety layer to API ensuring it can not be accessed before it is ready.
  Added scanning aspects for:
  * Encoded Pattern
  * Singularities
  * EU & RF P2P Tunnels
  Fixes #188: Crafting result is now updated on both client and server if wand vis levels change.
  Conversion monitor reports who is doing the insert or removal of essentia to the AE network.

5/21/2015 0.8.10.3
  Code cleanup.
  API name changes.
  Required research no longer shows up for ThE research if the ThE research is disabled.

5/19/2015 0.8.10.3
  Internal code cleanup.
  Much more robust checking of disabled AE or TC features.
  * I have tried to catch every possible issue that can arise from disabling features in either mod, but to say its complex is a bit of an understatement.
  Essentia provider recipe change: Replaced one of the coalescence cores with a diffusion core.

5/19/2015 0.8.10.2
  Bugfix: Essentia Storage Bus updates AE network if contents are externally changed.
  Bugfix: Essentia Terminal sync issue if a cell is removed/added while viewing terminal.