@@ -1,5 +1,6 @@
 ﻿5/29/2015 0.8.10.6
   Fixes #197: Arcane Assembler no longer eats armor on shift-click.
+  Fixes #196: Arcane Assembler requires Sceptre research.
 
 5/28/2015 0.8.10.6
   Major under-the-hood changes to how devices interact with the network are underway.
